# solvant

./: CMakeLists.txt  Makefile  README.md  solvant
.github/workflows/: ccpp.yml
SolverBenchmarking/: Matrix.cpp  Matrix.hpp  main.cpp
SolverBenchmarking.xcodeproj/: project.pbxproj
SolverBenchmarking.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SolverBenchmarking.xcodeproj/xcuserdata/anthony.xcuserdatad/xcschemes/: xcschememanagement.plist
base/: CMakeLists.txt  DOK_matrix.hpp  banded_matrix.hpp  bmatrix.hpp  dense_matrix.hpp  dmatrix.hpp  matrix.hpp  sparse_matrix.hpp  tri_matrix.hpp  tridiagonal_matrix.hpp
cmake/: FetchContent_Googlebenchmark.cmake  googletest-download.cmake
core/: banded_matrix.hpp  matrix.hpp  tridiagonal_matrix.hpp
docs/: CMakeLists.txt  Doxyfile.docs
driver/: main.cpp
examples/: 3x3multiplication.cpp  CMakeLists.txt
finance/: americancalloptionsolver.hpp  eurocalloptionsolver.hpp
include/: banded_matrix.hpp  matrix.hpp
solvant/: CMakeLists.txt  main.cpp
solvant/algo/: CMakeLists.txt  ge.hpp  thomas.hpp
solvant/algo/benchmarks/: CMakeLists.txt  ge_benchmark.cpp
solvant/algo/tests/: CMakeLists.txt  ge_test.cpp  thomas_test.cpp
solvant/core/: DOK_matrix.hpp  banded_matrix.hpp  matrix.hpp  tridiagonal_matrix.hpp  vector.hpp
solvant/core/tests/: CMakeLists.txt  DOK_test.cpp  banded_test.cpp  matrix_test.cpp  vector_test.cpp
solvant/geo/: geo.hpp
solvant/geo/tests/: CMakeLists.txt  geo_test.cpp
solvant/utils/: timer.hpp
solver/: CMakeLists.txt  directsolver.hpp  directtrisolver.hpp  solver.hpp  thomas.hpp  tsolver.hpp
solver/finsolv/: americancalloptionsolver.hpp  eurocalloptionsolver.hpp
sparse/: DOK_matrix.hpp
src/main/: main.cpp
src/matrix/: banded_matrix.hpp  matrix.cpp  matrix.hpp
tests/: CMakeLists.txt  DOK_test.cpp  banded_test.cpp  matrix_test.cpp  thomas_test.cpp  tridiag_test.cpp
utils/: CMakeLists.txt  timer.hpp
